--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+ .button {
+    font-size: 12px;
+    height: 27px;
+    background: linear-gradient(to bottom, #f7dfa5, #f0c14b);
+    background-image: linear-gradient(#f7dfa5, #f0c14b);
+    border: 1px solid #a88734;
+    border-radius: 2px;
+    margin-top: 7px;
+    width: 98%;
+    margin-bottom: 7px;
+ }
