--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,12 @@
     border: 1px solid #a88734;
     border-radius: 2px;
     margin-top: 7px;
-    width: 98%;
+    width: 300px;
     margin-bottom: 7px;
+ }
+
+ .button:hover {
+    cursor: pointer;
+    background: linear-gradient(to bottom, #f8c140, #e7b842);
+    background-image: linear-gradient(#fbd272, #e9b42d);
  }
