--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -7,7 +7,7 @@
 }
 
 .session-form {
-    width: 296px;
+    width: 300px;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -28,4 +28,60 @@
     border-radius: 4px;
     outline: 0;
     font-size: 100%;
+}
+
+.session-input:focus {
+    border: 1px solid #e9b42d;
+    box-shadow: 0 0 10px #e9b42d;
+    transition: 0.3s;
+}
+
+.switch-form {
+    padding-top: 20px;
+}
+
+
+.switch-form-text {
+    display: flex;
+    justify-content: center;
+    align-items:flex-end;
+    color: #807e7e;
+    background-color: white;
+    height: 5px;
+    font-size: 13px;
+}
+span {
+    background-color: #fff;
+    padding: 0px 7px 0px 8px;
+    z-index: 2;
+}
+
+.switch-form-line {
+    content: "";
+    display: block;
+    border-top: 1px solid #d2d2d2;
+    width: 300px;
+    position: relative;
+    margin-top: -6.5px;
+    padding-bottom: 10px;
+    z-index: 0;
+}
+
+.switch-button {
+    padding-bottom: 100px;
+}
+
+.errors-list {
+    list-style: none;
+    color: red;
+}
+
+.session-footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+    border-top: 2px solid rgb(206, 206, 206);
+    width: 100%;
+    background-color: rgb(240, 240, 240);
+    height: 200px;
 }
