--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -80,9 +80,13 @@ span {
 .session-footer {
     display: flex;
     justify-content: center;
-    padding-top: 100px;
     border-top: 2px solid rgb(206, 206, 206);
     width: 100%;
     background-color: rgb(240, 240, 240);
     height: 200px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
