--- a/app/assets/stylesheets/product_page.css
+++ b/app/assets/stylesheets/product_page.css
@@ -4,14 +4,22 @@
 
 .product-container {
     display: grid;
-    grid-template-columns: 300px 300px 300px 300px;
+    width: 75%;
+    grid-template-columns: 300px 300px 300px;
+    justify-content: space-between;
     position: absolute;
-    right: 0px;
+    right: 90px;
     padding-top: 50px;
 }
 
 .product-item {
+    height: 400px;
+    border-bottom: 2px solid gray;
     font-family: AmazonEmber;
+}
+
+.img {
+    height: 200px;
 }
 
 .product-count {
