--- a/app/assets/stylesheets/product_page.css
+++ b/app/assets/stylesheets/product_page.css
@@ -20,7 +20,7 @@
 
 .product-item:hover {
     cursor: pointer;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(247, 247, 247);
 }
 
 .img {
@@ -38,4 +38,23 @@
 
 .product-rating {
     filter: invert(88%) sepia(54%) saturate(1731%) hue-rotate(319deg) brightness(99%) contrast(91%);
+}
+
+.product-price {
+    display: flex;
+    align-items: center;
+}
+
+.product-price-dollars {
+    font-size: 30px;
+}
+
+.product-price-cents {
+    position: relative;
+    top: -5px;
+}
+
+.product-price-sign {
+    position: relative;
+    top: -4px;
 }
