added reviews routes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,11 @@
     color: black;
  }
 
+ .splash {
+    display: flex;
+    justify-content: center;
+ }
+
  .button {
     font-size: 12px;
     height: 27px;
