--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,9 +53,6 @@
    width: 100%;
    background-color: #232f3e;
    height: 100px;
-   position: fixed;
-   left: 0;
-   bottom: 40px;
    width: 100%;
    text-align: center;
 }
@@ -68,9 +65,6 @@
       color: rgb(229, 227, 227);
       background-color: #131921;
       height: 40px;
-      position: fixed;
-      left: 0;
-      bottom: 0;
       width: 100%;
       text-align: center;
  }
@@ -78,4 +72,8 @@
  .splash {
    font-family: AmazonEmber;
    font-size: 100px;
+ }
+
+ .product-page {
+    min-height: auto;
  }
