--- a/app/assets/stylesheets/product_page.css
+++ b/app/assets/stylesheets/product_page.css
@@ -3,11 +3,15 @@
 } */
 
 .product-container {
+    display: flex;
+    justify-content: center;
+}
+
+.product-list {
     display: grid;
     width: 75%;
     grid-template-columns: 300px 300px 300px;
     justify-content: space-between;
-    position: absolute;
     right: 90px;
     padding-top: 50px;
 }
