--- a/app/assets/stylesheets/show_product.css
+++ b/app/assets/stylesheets/show_product.css
@@ -1,10 +1,21 @@
 .show-product-container {
     display: flex;
     justify-content: center;
+    padding-top: 40px;
+    padding-bottom: 30px;
 }
+
 
 .show-product-mid {
     width: 500px;
+    font-family: AmazonEmber;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.show-product-mid > h1{
+    font-size: 30px;
+    font-weight: 200;
 }
 
 .show-product-cart {
@@ -17,8 +28,21 @@
     /* justify-content: center; */
 }
 
-.show-product-cart > button {
+.button3 {
     width: 150px;
+    height: 30px;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    text-align: center;
+    background-color: #FFA41C;
+    border-color: #FF8F00;
+}
+
+.button3:hover {
+    cursor: pointer;
+    background-color: #f8990a;
+    border-color: #dd7e02;
 }
 
 .reviews {
@@ -26,6 +50,8 @@
     display: flex;
     justify-content: center;
     font-family: AmazonEmber;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .reviews > div {
@@ -43,5 +69,60 @@
 }
 
 .reviews > ul > li {
-    padding-bottom: 30px;
+    padding-bottom: 35px;
+}
+
+.review-profile {
+    display: flex;
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+/* .review-profile-pic {
+    width: 30px;
+} */
+
+.review-header {
+    display: flex;
+    padding-bottom: 5px;
+}
+
+.review-title {
+    font-weight: bold;
+    padding-left: 10px;
+}
+
+.review-date {
+    color: gray;
+    padding-bottom: 5px;
+}
+
+.review-purchase {
+    color: rgb(210, 96, 55);
+    padding-bottom: 5px;
+}
+
+.review-buttons {
+    padding-top: 5px;
+}
+
+.button2 {
+    background: white;
+    height: 29px;
+    width: 100px;
+    border-color: #D5D9D9;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+}
+
+.button2:hover {
+    cursor: pointer;
+    background: #D5D9D9;
+    height: 29px;
+    width: 100px;
+    border-color: #babfbf;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
 }
