--- a/app/assets/stylesheets/show_product.css
+++ b/app/assets/stylesheets/show_product.css
@@ -3,12 +3,12 @@
     justify-content: center;
     padding-top: 40px;
     padding-bottom: 30px;
+    font-family: AmazonEmber;
 }
 
 
 .show-product-mid {
     width: 500px;
-    font-family: AmazonEmber;
     padding-right: 20px;
     padding-left: 20px;
 }
@@ -16,7 +16,38 @@
 .show-product-mid > h1{
     font-size: 30px;
     font-weight: 200;
+    padding-bottom: 10px;
 }
+
+.show-product-rating {
+    display: flex;
+    border-bottom: 1px solid #dcdddd;
+    padding-bottom: 10px;
+}
+
+.show-product-ratings {
+    color: #007185;
+    padding-left: 10px;
+}
+
+
+.show-product-price-container {
+    border-bottom: 1px solid #dcdddd;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    display: flex;
+}
+
+.show-product-price-label {
+    color: #797b7b;
+    padding-right: 7px;
+}
+
+.show-product-price {
+    color: rgb(194, 73, 29);
+    font-size: 20px;
+}
+
 
 .show-product-cart {
     width: 200px;
@@ -28,10 +59,35 @@
     /* justify-content: center; */
 }
 
+.show-price {
+    color: rgb(194, 73, 29);
+}
+
+.show-stock {
+    color: green;
+}
+
 .button3 {
     width: 150px;
     height: 30px;
-    border-radius: 10px;
+    border-radius: 15px;
+    border-style: solid;
+    border-width: 1px;
+    text-align: center;
+    background-color: #FFD814;
+    border-color: #FCD200;
+}
+
+.button3:hover {
+    cursor: pointer;
+    background-color: #edc500;
+    border-color: #ebc402;
+}
+
+.button4 {
+    width: 150px;
+    height: 30px;
+    border-radius: 15px;
     border-style: solid;
     border-width: 1px;
     text-align: center;
@@ -39,10 +95,37 @@
     border-color: #FF8F00;
 }
 
-.button3:hover {
+.button4:hover {
     cursor: pointer;
     background-color: #f8990a;
     border-color: #dd7e02;
+}
+
+.secure-transaction {
+    display: flex;
+}
+
+.secure-transaction-text {
+    color: #007185;
+    padding-left: 10px;
+}
+
+.show-ship-container {
+    display: flex;
+    font-size: 13px;
+    color: #797b7b;
+}
+
+.show-sold-container {
+    display: flex;
+    font-size: 13px;
+    color: #797b7b;
+}
+
+.show-jamazon {
+    padding-left: 10px;
+    color: black;
+
 }
 
 .reviews {
