--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -57,7 +57,7 @@
     font-size: 14px;
     /* font-weight: bold; */
 }
-span {
+h5 > span {
     background-color: #fff;
     padding: 0px 7px 0px 8px;
     z-index: 2;
