--- a/app/assets/stylesheets/show_product.css
+++ b/app/assets/stylesheets/show_product.css
@@ -38,6 +38,7 @@
     display: flex;
 }
 
+
 .show-product-price-label {
     color: #797b7b;
     padding-right: 7px;
@@ -48,27 +49,73 @@
     font-size: 20px;
 }
 
+h2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 
 .show-product-cart {
-    width: 200px;
+    width: 250px;
     height: 400px;
     border: 1px solid gray;
     border-radius: 5px;
+    font-size: 15px;
     /* display: flex; */
     /* align-items: center; */
     /* justify-content: center; */
 }
 
+.show-product-cart-inner {
+    padding: 20px;
+    padding-left: 30px;
+}
+
 .show-price {
     color: rgb(194, 73, 29);
+    font-size: 20px;
+}
+
+.show-delivery-free {
+    padding-top: 10px;
+}
+
+.show-delivery-free > span{
+    padding-left: 5px;
+    font-weight: bolder;
+}
+
+.show-delivery-fast {
+    padding-top: 10px;
+}
+
+.show-delivery-fast > span {
+    padding-right: 5px;
+}
+
+.show-delivery-date {
+    font-weight: bolder;
+}
+
+.show-delivery-time {
+    color: green;
 }
 
 .show-stock {
     color: green;
+    padding-top: 10px;
+}
+
+.show-form {
+    padding-top: 10px
+}
+
+.show-button-container {
+    padding-top: 10px;
 }
 
 .button3 {
-    width: 150px;
+    width: 200px;
     height: 30px;
     border-radius: 15px;
     border-style: solid;
@@ -85,7 +132,7 @@
 }
 
 .button4 {
-    width: 150px;
+    width: 200px;
     height: 30px;
     border-radius: 15px;
     border-style: solid;
@@ -103,6 +150,8 @@
 
 .secure-transaction {
     display: flex;
+    align-items: center;
+    padding-top: 10px;
 }
 
 .secure-transaction-text {
@@ -114,18 +163,32 @@
     display: flex;
     font-size: 13px;
     color: #797b7b;
+    padding-top: 10px;
 }
 
 .show-sold-container {
     display: flex;
     font-size: 13px;
     color: #797b7b;
+    padding-top: 10px;
 }
 
 .show-jamazon {
     padding-left: 10px;
     color: black;
 
+}
+
+.show-return-container {
+    padding-top: 10px;
+}
+
+.show-return-container > span{
+    padding-right: 5px;
+}
+
+.show-return-date {
+    color: #007185;
 }
 
 .reviews {
