--- a/app/assets/stylesheets/show_product.css
+++ b/app/assets/stylesheets/show_product.css
@@ -52,6 +52,7 @@
 h2 {
     padding-top: 10px;
     padding-bottom: 10px;
+    font-size: 25px;
 }
 
 
@@ -191,8 +192,30 @@ h2 {
     color: #007185;
 }
 
+.button5 {
+    background: white;
+    height: 29px;
+    width: 200px;
+    border-color: #D5D9D9;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+}
+
+.button5:hover {
+    cursor: pointer;
+    background: #D5D9D9;
+    height: 29px;
+    width: 200px;
+    border-color: #babfbf;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+}
+
 .reviews {
     border-top: 1px solid rgb(205, 205, 205);
+    padding-top: 15px;
     display: flex;
     justify-content: center;
     font-family: AmazonEmber;
@@ -207,6 +230,19 @@ h2 {
 .reviews-left > h3 {
     padding-bottom: 10px;
     border-bottom: 1px solid rgb(205, 205, 205);
+}
+
+.reviews-rating {
+    padding-top: 10px;
+    display: flex;
+}
+
+.reviews-rating > div {
+    padding-right: 10px;
+}
+
+.reviews-global-ratings {
+    color: #888787;
 }
 
 
