finished write review

--- a/app/assets/stylesheets/product_page.css
+++ b/app/assets/stylesheets/product_page.css
@@ -20,6 +20,7 @@
     height: 400px;
     border-bottom: 2px solid gray;
     font-family: AmazonEmber;
+    margin-bottom: 20px;
 }
 
 .product-item:hover {
