--- a/app/assets/stylesheets/show_product.css
+++ b/app/assets/stylesheets/show_product.css
@@ -223,13 +223,14 @@ h2 {
     line-height: 20px;
 }
 
-.reviews > div {
+.reviews-left {
     width: 300px;
+    margin-right: 30px;
 }
 
 .reviews-left > h3 {
     padding-bottom: 10px;
-    border-bottom: 1px solid rgb(205, 205, 205);
+    font-size: 25px;
 }
 
 .reviews-rating {
@@ -241,8 +242,26 @@ h2 {
     padding-right: 10px;
 }
 
+
 .reviews-global-ratings {
     color: #888787;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid rgb(205, 205, 205);
+}
+
+.reviews-left > div > h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.reviews-share {
+    margin-bottom: 10px;
+}
+
+.reviews-bottom {
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(205, 205, 205);
 }
 
 
@@ -256,13 +275,18 @@ h2 {
 
 .review-profile {
     display: flex;
-    align-items: center;
     padding-bottom: 5px;
 }
 
-/* .review-profile-pic {
-    width: 30px;
-} */
+.review-profile-name {
+    position: relative;
+    left: 15px;
+    top: -3px;
+}
+
+.review-profile-pic {
+    transform: scale(2);
+}
 
 .review-header {
     display: flex;
