--- a/app/assets/stylesheets/cart.css
+++ b/app/assets/stylesheets/cart.css
@@ -23,7 +23,7 @@
     font-family: AmazonEmber;
     background-color: rgb(225, 225, 225);
     display: grid;
-    grid-template-columns: 2vw 80vw 2vw 14vw 2vw;
+    grid-template-columns: 1vw 80.5vw 1vw 16vw 1.5vw;
     grid-template-rows: 2vh auto 2vh;
 }
 
@@ -41,6 +41,7 @@
     flex-direction: column;
     background-color: white;
     border: 2vh solid white;
+    border-radius: 2px;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
 }
@@ -52,6 +53,20 @@
     border: 1px solid rgb(205, 205, 205);
     border-radius: 3px;
     padding: 1vh;
+    height: 20vh;
+}
+
+.cart-item-photo-container {
+    width: 10vw;
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart-item-photo {
+    max-width: 10vw;
+    max-height: 20vh;
 }
 
 .cart-item-text {
@@ -62,11 +77,37 @@
     margin-bottom: 1vh;
 }
 
+.button7 {
+    background-color: white;
+    color: rgb(46, 128, 252);
+    border: 0px;
+}
+
+.button7:hover{
+    border-bottom: 1px solid blue;
+    cursor: pointer;
+}
+
+.cart-subtotal {
+    display: flex;
+    align-self: flex-end;
+    margin-top: 10px;
+}
+
 .checkout-container {
     background-color: white;
+    border-radius: 2px;
     grid-column: 4 / 5;
     grid-row: 2 / 3;
-    height: 200px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkout-container > div {
+    margin-bottom: 1vh;
 }
 
 .cart-stock {
