--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -67,12 +67,19 @@
 .shopping-cart {
     display: flex;
     align-items: center;
-    padding-right: 20px;
+    padding-right: 17px;
     padding-left: 10px;
+    font-family: AmazonEmber;
+}
+
+.shopping-cart-title {
+    color: white;
 }
 
 .shopping-cart-padding {
     border: 2px solid #131921;
+    padding-top: 10px;
+    padding-bottom: 5px;
 }
 
 .shopping-cart-padding:hover {
